@@ -4,6 +4,8 @@
  * Added a time display to the floating control in the minigui.
  * The playlist and the volume slider don't send mouse events to their
    parents. Should fix bugs #1993291 and #2020003.
+ * Avoid to resize the main window to the default size (400x300) when 
+   playing an audio file.
 
 (2008-08-06)
  * The find subtitles dialog is now a top level window, instead of a dialog.
